17765
{code}
scala> class foo extends scala.annotation.StaticAnnotation
defined class foo

scala> class C @foo (x: Int)
<console>:30: error: foo does not take parameters
       class C @foo (x: Int)
                ^
{code}
